documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

L13W32API BOOL __stdcall L13_ModeIsBC(HCARD handleval);

L13W32API BOOL __stdcall L13_ModeIsMon(HCARD handleval);

L13W32API BOOL __stdcall L13_ModeIsNotBC(HCARD handleval);

L13W32API BOOL __stdcall L13_ModeIsNotMon(HCARD handleval);

L13W32API BOOL __stdcall L13_ModeIsNotPlay(HCARD handleval);

L13W32API BOOL __stdcall L13_ModeIsNotRT(HCARD handleval);

L13W32API BOOL __stdcall L13_ModeIsNotSerial(HCARD handleval);

L13W32API BOOL __stdcall L13_ModeIsPlay(HCARD handleval);

L13W32API BOOL __stdcall L13_ModeIsRT(HCARD handleval);

L13W32API BOOL __stdcall L13_ModeIsSerial(HCARD handleval);

L13W32API USHORT __stdcall L13_ModeRd(HCARD handleval);

L13W32API VOID __stdcall L13_ModeWr(USHORT mode,HCARD handleval);

L13W32API ULONG __stdcall L13_MonBlkRd(LPUSHORT buf,ULONG bufcount,LPULONG blkcnt,HCARD handleval);

L13W32API ULONG __stdcall L13_MonBlkRdEx(LPUSHORT buf,ULONG bufcount,ULONG maxblkcnt,LPULONG blkcnt,HCARD handleval);

L13W32API ERRVAL __stdcall L13_MonClear(HCARD handleval);

L13W32API ERRVAL __stdcall L13_MonConfigEx(ULONG configval,ULONG moncount,USHORT cardnum,HCARD handleval);

L13W32API ERRVAL __stdcall L13_MonConfigExx(ULONG configval,ULONG seqaddr,ULONG moncount,USHORT cardnum,HCARD handleval);

L13W32API ERRVAL __stdcall L13_MonFilterSAEx(INT taval,ULONG rcvsamask,ULONG xmtsamask,ULONG rcvmcmask,ULONG xmtmcmask,HCARD handleval);

L13W32API USHORT __stdcall L13_MonRdEx(LPUSHORT buf,USHORT bufcount,HCARD handleval);

L13W32API BOOL __stdcall L13_MonResume(HCARD handleval);

L13W32API BOOL __stdcall L13_MonStart(HCARD handleval);

L13W32API BOOL __stdcall L13_MonStatus(HCARD handleval);

L13W32API BOOL __stdcall L13_MonStop(HCARD handleval);

L13W32API MSGADDR __stdcall L13_MsgBlockRd(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

L13W32API MSGADDR __stdcall L13_MsgBlockWr(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

L13W32API USHORT __stdcall L13_MsgCheck(MSGADDR msgaddr,HCARD handleval);

L13W32API MSGADDR __stdcall L13_MsgCommRd(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

L13W32API MSGADDR __stdcall L13_MsgCommWr(LPUSHORT buf,MSGADDR msgaddr,HCARD handleval);

L13W32API MSGADDR __stdcall L13_MsgConfig(ULONG configval,HCARD handleval);

L13W32API MSGADDR __stdcall L13_MsgConfigEx(ULONG configval,USHORT cwd,HCARD handleval);

L13W32API USHORT __stdcall L13_MsgCWD1Rd(MSGADDR msgaddr,HCARD handleval);

L13W32API VOID __stdcall L13_MsgCWD1Wr(USHORT cwd1,MSGADDR msgaddr,HCARD handleval);

L13W32API USHORT __stdcall L13_MsgCWD2Rd(MSGADDR msgaddr,HCARD handleval);

L13W32API VOID __stdcall L13_MsgCWD2Wr(USHORT cwd2,MSGADDR msgaddr,HCARD handleval);

L13W32API USHORT __stdcall L13_MsgErrorRd(MSGADDR msgaddr,HCARD handleval);

L13W32API VOID __stdcall L13_MsgErrorWr(USHORT value,MSGADDR msgaddr,HCARD handleval);

L13W32API USHORT __stdcall L13_MsgFlagRd(MSGADDR msgaddr,HCARD handleval);

L13W32API VOID __stdcall L13_MsgFlagWr(USHORT msgflag,MSGADDR msgaddr,HCARD handleval);

L13W32API BOOL __stdcall L13_MsgIsAccessed(MSGADDR msgaddr,HCARD handleval);

L13W32API USHORT __stdcall L13_MsgOptRd(MSGADDR msgaddr,HCARD handleval);

L13W32API VOID __stdcall L13_MsgOptWr(USHORT msgopt,MSGADDR msgaddr,HCARD handleval);

L13W32API MSGADDR __stdcall L13_MsgReset(MSGADDR msgaddr,HCARD handleval);

L13W32API USHORT __stdcall L13_MsgSWD1Rd(MSGADDR msgaddr,HCARD handleval);

L13W32API USHORT __stdcall L13_MsgSWD2Rd(MSGADDR msgaddr,HCARD handleval);

L13W32API ULONG __stdcall L13_Mul(ULONG mula,ULONG mulb);

L13W32API ERRVAL __stdcall L13_PlayClear(HCARD handleval);

L13W32API ERRVAL __stdcall L13_PlayConfigEx(ULONG configval,ULONG playcount,ULONG seqcount,USHORT cardnum,HCARD handleval);

L13W32API ERRVAL __stdcall L13_PlayConfigExx(ULONG configval,ULONG playaddr,ULONG playcount,ULONG seqaddr,ULONG seqcount,USHORT cardnum,HCARD handleval);

L13W32API USHORT __stdcall L13_PlayWrEx(LPUSHORT buf,USHORT bufcount,HCARD handleval);

L13W32API USHORT __stdcall L13_PortRd(INT addrval,HCARD handleval);

L13W32API VOID __stdcall L13_PortWr(USHORT value,INT addrval,HCARD handleval);

L13W32API USHORT __stdcall L13_ProgRdW(USHORT addrval,HCARD handleval);

L13W32API VOID __stdcall L13_ProgWrW(USHORT value,USHORT addrval,HCARD handleval);

L13W32API VOID __stdcall L13_RAMFill(USHORT value,ULONG addrval,ULONG countval,HCARD handleval);

L13W32API BOOL __stdcall L13_RAMIsDPM(ULONG addrval);

L13W32API USHORT __stdcall L13_RAMRdB(ULONG addrval,HCARD handleval);

L13W32API ULONG __stdcall L13_RAMRdL(ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_RAMRdsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L13W32API VOID __stdcall L13_RAMRdsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L13W32API USHORT __stdcall L13_RAMRdW(ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_RAMWipe(HCARD handleval);

L13W32API VOID __stdcall L13_RAMWipeEx(USHORT value,HCARD handleval);

L13W32API VOID __stdcall L13_RAMWrB(USHORT value,ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_RAMWrL(ULONG value,ULONG addrval,HCARD handleval);

L13W32API VOID __stdcall L13_RAMWrsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

L13W32API VOID __stdcall L13_RAMWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

L13W32API VOID __stdcall L13_RAMWrW(USHORT value,ULONG addrval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_RTConfigEx(ULONG configval,INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_RTConfigExx(ULONG configval,INT taval,HCARD handleval);

L13W32API LISTADDR __stdcall L13_RTCreateListEx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L13W32API LISTADDR __stdcall L13_RTCreateListExx(ULONG listconfigval,INT skipval,INT count,ULONG msgconfigval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_RTReset(INT taval,HCARD handleval);

L13W32API USHORT __stdcall L13_RTStatus(INT taval,HCARD handleval);

L13W32API USHORT __stdcall L13_RTSWDRd(INT taval,HCARD handleval);

L13W32API ERRVAL __stdcall L13_SchedBuild(INT nummsgs,LPMSGADDR msgaddr,LPINT freq,HCARD handleval);