documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32NET.VB

    Public Declare Function L13_ModeIsBC Lib "L13W32.DLL" Alias "_L13_ModeIsBC@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ModeIsMon Lib "L13W32.DLL" Alias "_L13_ModeIsMon@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ModeIsNotBC Lib "L13W32.DLL" Alias "_L13_ModeIsNotBC@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ModeIsNotMon Lib "L13W32.DLL" Alias "_L13_ModeIsNotMon@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ModeIsNotPlay Lib "L13W32.DLL" Alias "_L13_ModeIsNotPlay@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ModeIsNotRT Lib "L13W32.DLL" Alias "_L13_ModeIsNotRT@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ModeIsNotSerial Lib "L13W32.DLL" Alias "_L13_ModeIsNotSerial@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ModeIsPlay Lib "L13W32.DLL" Alias "_L13_ModeIsPlay@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ModeIsRT Lib "L13W32.DLL" Alias "_L13_ModeIsRT@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ModeIsSerial Lib "L13W32.DLL" Alias "_L13_ModeIsSerial@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_ModeRd Lib "L13W32.DLL" Alias "_L13_ModeRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_ModeWr Lib "L13W32.DLL" Alias "_L13_ModeWr@8" (ByVal mode As UInt16, ByVal handleval As UInt32)
    Public Declare Function L13_MonBlkRd Lib "L13W32.DLL" Alias "_L13_MonBlkRd@16" (ByRef buf As UInt16, ByVal bufcount As UInt32, ByRef blkcnt As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_MonBlkRdEx Lib "L13W32.DLL" Alias "_L13_MonBlkRdEx@20" (ByRef buf As UInt16, ByVal bufcount As UInt32, ByVal maxblkcnt As UInt32, ByRef blkcnt As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_MonClear Lib "L13W32.DLL" Alias "_L13_MonClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_MonConfigEx Lib "L13W32.DLL" Alias "_L13_MonConfigEx@16" (ByVal configval As UInt32, ByVal moncount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_MonConfigExx Lib "L13W32.DLL" Alias "_L13_MonConfigExx@20" (ByVal configval As UInt32, ByVal seqaddr As UInt32, ByVal moncount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_MonFilterSAEx Lib "L13W32.DLL" Alias "_L13_MonFilterSAEx@24" (ByVal taval As Int32, ByVal rcvsamask As UInt32, ByVal xmtsamask As UInt32, ByVal rcvmcmask As UInt32, ByVal xmtmcmask As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_MonRdEx Lib "L13W32.DLL" Alias "_L13_MonRdEx@12" (ByRef buf As UInt16, ByVal bufcount As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_MonResume Lib "L13W32.DLL" Alias "_L13_MonResume@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_MonStart Lib "L13W32.DLL" Alias "_L13_MonStart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_MonStatus Lib "L13W32.DLL" Alias "_L13_MonStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_MonStop Lib "L13W32.DLL" Alias "_L13_MonStop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_MsgBlockRd Lib "L13W32.DLL" Alias "_L13_MsgBlockRd@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_MsgBlockWr Lib "L13W32.DLL" Alias "_L13_MsgBlockWr@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_MsgCheck Lib "L13W32.DLL" Alias "_L13_MsgCheck@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_MsgCommRd Lib "L13W32.DLL" Alias "_L13_MsgCommRd@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_MsgCommWr Lib "L13W32.DLL" Alias "_L13_MsgCommWr@12" (ByRef buf As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_MsgConfig Lib "L13W32.DLL" Alias "_L13_MsgConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_MsgConfigEx Lib "L13W32.DLL" Alias "_L13_MsgConfigEx@12" (ByVal configval As UInt32, ByVal cwd As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_MsgCWD1Rd Lib "L13W32.DLL" Alias "_L13_MsgCWD1Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_MsgCWD1Wr Lib "L13W32.DLL" Alias "_L13_MsgCWD1Wr@12" (ByVal cwd1 As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function L13_MsgCWD2Rd Lib "L13W32.DLL" Alias "_L13_MsgCWD2Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_MsgCWD2Wr Lib "L13W32.DLL" Alias "_L13_MsgCWD2Wr@12" (ByVal cwd2 As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function L13_MsgErrorRd Lib "L13W32.DLL" Alias "_L13_MsgErrorRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_MsgErrorWr Lib "L13W32.DLL" Alias "_L13_MsgErrorWr@12" (ByVal value As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function L13_MsgFlagRd Lib "L13W32.DLL" Alias "_L13_MsgFlagRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_MsgFlagWr Lib "L13W32.DLL" Alias "_L13_MsgFlagWr@12" (ByVal msgflag As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function L13_MsgIsAccessed Lib "L13W32.DLL" Alias "_L13_MsgIsAccessed@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_MsgOptRd Lib "L13W32.DLL" Alias "_L13_MsgOptRd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_MsgOptWr Lib "L13W32.DLL" Alias "_L13_MsgOptWr@12" (ByVal msgopt As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function L13_MsgReset Lib "L13W32.DLL" Alias "_L13_MsgReset@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_MsgSWD1Rd Lib "L13W32.DLL" Alias "_L13_MsgSWD1Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_MsgSWD2Rd Lib "L13W32.DLL" Alias "_L13_MsgSWD2Rd@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_Mul Lib "L13W32.DLL" Alias "_L13_Mul@8" (ByVal mula As UInt32, ByVal mulb As UInt32) As UInt32
    Public Declare Function L13_PlayClear Lib "L13W32.DLL" Alias "_L13_PlayClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L13_PlayConfigEx Lib "L13W32.DLL" Alias "_L13_PlayConfigEx@20" (ByVal configval As UInt32, ByVal playcount As UInt32, ByVal seqcount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_PlayConfigExx Lib "L13W32.DLL" Alias "_L13_PlayConfigExx@28" (ByVal configval As UInt32, ByVal playaddr As UInt32, ByVal playcount As UInt32, ByVal seqaddr As UInt32, ByVal seqcount As UInt32, ByVal cardnum As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_PlayWrEx Lib "L13W32.DLL" Alias "_L13_PlayWrEx@12" (ByRef buf As UInt16, ByVal bufcount As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_PortRd Lib "L13W32.DLL" Alias "_L13_PortRd@8" (ByVal addrval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_PortWr Lib "L13W32.DLL" Alias "_L13_PortWr@12" (ByVal value As UInt16, ByVal addrval As Int32, ByVal handleval As UInt32)
    Public Declare Function L13_ProgRdW Lib "L13W32.DLL" Alias "_L13_ProgRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_ProgWrW Lib "L13W32.DLL" Alias "_L13_ProgWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L13_RAMFill Lib "L13W32.DLL" Alias "_L13_RAMFill@16" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal countval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L13_RAMIsDPM Lib "L13W32.DLL" Alias "_L13_RAMIsDPM@4" (ByVal addrval As UInt32) As Int32
    Public Declare Function L13_RAMRdB Lib "L13W32.DLL" Alias "_L13_RAMRdB@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_RAMRdL Lib "L13W32.DLL" Alias "_L13_RAMRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L13_RAMRdsL Lib "L13W32.DLL" Alias "_L13_RAMRdsL@16" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L13_RAMRdsW Lib "L13W32.DLL" Alias "_L13_RAMRdsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Function L13_RAMRdW Lib "L13W32.DLL" Alias "_L13_RAMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L13_RAMWipe Lib "L13W32.DLL" Alias "_L13_RAMWipe@4" (ByVal handleval As UInt32)
    Public Declare Sub L13_RAMWipeEx Lib "L13W32.DLL" Alias "_L13_RAMWipeEx@8" (ByVal value As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L13_RAMWrB Lib "L13W32.DLL" Alias "_L13_RAMWrB@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L13_RAMWrL Lib "L13W32.DLL" Alias "_L13_RAMWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L13_RAMWrsL Lib "L13W32.DLL" Alias "_L13_RAMWrsL@16" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L13_RAMWrsW Lib "L13W32.DLL" Alias "_L13_RAMWrsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L13_RAMWrW Lib "L13W32.DLL" Alias "_L13_RAMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L13_RTConfigEx Lib "L13W32.DLL" Alias "_L13_RTConfigEx@12" (ByVal configval As UInt32, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_RTConfigExx Lib "L13W32.DLL" Alias "_L13_RTConfigExx@12" (ByVal configval As UInt32, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_RTCreateListEx Lib "L13W32.DLL" Alias "_L13_RTCreateListEx@36" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_RTCreateListExx Lib "L13W32.DLL" Alias "_L13_RTCreateListExx@36" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L13_RTReset Lib "L13W32.DLL" Alias "_L13_RTReset@8" (ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L13_RTStatus Lib "L13W32.DLL" Alias "_L13_RTStatus@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_RTSWDRd Lib "L13W32.DLL" Alias "_L13_RTSWDRd@8" (ByVal taval As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L13_SchedBuild Lib "L13W32.DLL" Alias "_L13_SchedBuild@16" (ByVal nummsgs As Int32, ByRef msgaddr As UInt32, ByRef freq As Int32, ByVal handleval As UInt32) As Int32
